# room-topology

./: AGENT.md  Cargo.toml  README.md
examples/: tutorial.rs
memory/: JOURNAL.md
src/: complex.rs  continuity.rs  cover.rs  door.rs  fundamental.rs  homology.rs  lib.rs  room.rs  warp.rs
tests/: integration.rs
